# A_Cretzu_Cafe

./: README.md
0_Project_Proposal/: Aplicație pentru păstrarea sigură a documentelor.docx
1_SRD/: SRD.docx  srd.txt  test.txt
2_TP/: Plan de testare.docx  tp.txt
3_Solution/Client/: Client.sln
3_Solution/Client/Client/: Baze.txt  Client.vcxproj  Client.vcxproj.filters  Network.cpp  Network.h  citirea_afisarea_vector_intregi.txt  source.cpp
3_Solution/Client/Client/x64/Debug/: Client.exe.recipe  Client.ilk  vc143.idb
3_Solution/Client/Client/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
3_Solution/Server/: Server.sln
3_Solution/Server/Server/: DatabaseManagerAccounts.cpp  DatabaseManagerAccounts.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.txt  Retea.cpp  Retea.h  Server.vcxproj  Server.vcxproj.filters  UserManager.cpp  UserManager.h  doua_cuvinte.txt  file_ex.txt  source.cpp
3_Solution/Server/Server/10/: 2.docx
3_Solution/Server/Server/Server/: Logger.h  Logger.txt  MyException.h  Retea.cpp  UserManager.cpp  UserManager.h
3_Solution/Server/Server/x64/Debug/: Server.exe.recipe  Server.ilk  retea.obj.enc  vc143.idb
Aegis_v1/: CMakeLists.txt  login.cpp  login.h  mainwindow.cpp  mainwindow.h  register.cpp  register.h  resizer.cpp  resizer.h
Aegis_v2/Aegis_v2/: CMakeLists.txt  Network.cpp  Network.h  img.qrc  login.cpp  login.h  main.cpp  mainmenu.cpp  mainmenu.h  register.cpp  register.h  resizer.cpp  resizer.h
Aegis_v4/: CMakeLists.txt  Network.cpp  Network.h  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Shelf/: Steps.txt  sql.txt
(+16 files in other folders)
